--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -1,18 +1,18 @@
-.header {
+.Header {
   width: 100%;
   height: 54px;
 
   z-index: 500;
   background-color: #355990;
 }
-.content {
+.Content {
   width: 70%;
   margin: 10px auto;
   color: white;
   font-size: large;
   font-weight: 300;
 }
-.strap {
+.Strap {
   width: 100%;
   height: 10px;
   background-color: #1e3b68;
