--- a/src/containers/Forms/Form/Form.module.css
+++ b/src/containers/Forms/Form/Form.module.css
@@ -5,12 +5,17 @@
   border-radius: 3px;
   box-shadow: 0px 0px 3px lightgray;
 }
-.Form {
+.Container {
   width: 88%;
-  border-top: 1px solid lightgrey;
   margin: 15px auto;
+  display: flex;
+  flex-direction: column;
+}
+.Form {
+  border-top: 1px solid lightgrey;
 }
 .Text {
   color: #355990;
   font-weight: 450;
+  margin-bottom: 5px;
 }
