--- a/src/containers/Forms/Form/Form.module.css
+++ b/src/containers/Forms/Form/Form.module.css
@@ -19,3 +19,20 @@
   font-weight: 450;
   margin-bottom: 5px;
 }
+.Button {
+  display: flex;
+  justify-content: space-around;
+}
+.Button > button {
+  background-color: #ff8e1d;
+  border: none;
+  color: white;
+  border-radius: 2px;
+  height: 50px;
+  width: 150px;
+  font-weight: 600;
+}
+.Button > button:disabled {
+  cursor: not-allowed;
+  background-color: #ccc;
+}
