--- a/src/containers/Forms/Form/Form.module.css
+++ b/src/containers/Forms/Form/Form.module.css
@@ -22,6 +22,7 @@
 .Button {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 15px;
 }
 .Button > button {
   background-color: #ff8e1d;
