--- a/src/containers/InputSwitcher/InputSwitcher.module.css
+++ b/src/containers/InputSwitcher/InputSwitcher.module.css
@@ -1,8 +1,19 @@
 .Input {
   width: 100%;
   box-sizing: border-box;
-  margin: 10px 0px 10px;
 }
+
+.RadioLabel {
+  display: inline-flex;
+}
+.RadioLabel > input {
+  margin: auto 5px auto;
+}
+
+.InputNumber {
+  width: 15%;
+}
+
 input,
 select,
 textarea {
@@ -18,28 +29,12 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.Label {
-  text-transform: uppercase;
-  font-size: small;
-  color: #355990;
-  font-weight: 500;
-}
-.Label > *:last-child {
-  color: salmon;
-}
-.Columns {
-  display: grid;
-  grid-template-columns: minmax(0, 2fr) minmax(0, 6fr) minmax(0, 3fr);
-  grid-template-columns: 18% 57% 23%;
-  grid-column-gap: 5px;
-}
-
 .Invalid {
   border: 1px solid salmon;
 }
 
 .FullWidth {
-  width: 100%;
+  min-width: 100%;
   box-sizing: border-box;
 }
 
@@ -56,11 +51,4 @@ input[type="number"]::-webkit-inner-spin-button {
   font-style: italic;
   color: lightgray;
   margin: 0px;
-}
-.MainInputs > * {
-  margin-right: 10px;
-  font-size: small;
-}
-.MainInputs > *:last-child {
-  margin-right: 0px;
 }
