--- a/src/containers/Forms/Form/Form.module.css
+++ b/src/containers/Forms/Form/Form.module.css
@@ -1,5 +1,6 @@
 .Body {
   width: 80%;
+  min-width: 547px;
   margin: 15px auto;
   background-color: white;
   border-radius: 3px;
@@ -7,6 +8,7 @@
 }
 .Container {
   width: 88%;
+  min-width: 487px;
   margin: 15px auto;
   display: flex;
   flex-direction: column;
