--- a/src/containers/SuccessMessage/SuccessMessage.module.css
+++ b/src/containers/SuccessMessage/SuccessMessage.module.css
@@ -1,6 +1,8 @@
 .Body {
   width: 80%;
   height: 100px;
+  min-width: 547px;
+  max-width: 860px;
   margin: 15px auto;
   background-color: #f0fcf3;
   border-radius: 3px;
@@ -8,6 +10,7 @@
 }
 .Container {
   width: 88%;
+  min-width: 487px;
   margin: 15px auto;
   display: flex;
   flex-direction: column;
