--- a/src/containers/ErrorMessage/ErrorMessage.module.css
+++ b/src/containers/ErrorMessage/ErrorMessage.module.css
@@ -39,3 +39,9 @@
 .Rectangle > span:first-letter {
   text-transform: uppercase;
 }
+
+@media (max-width: 540px) {
+  .Error {
+    display: none;
+  }
+}
