--- a/src/containers/SuccessMessage/SuccessMessage.module.css
+++ b/src/containers/SuccessMessage/SuccessMessage.module.css
@@ -25,3 +25,13 @@
   margin-top: 5px;
   font-size: small;
 }
+
+@media (max-width: 540px) {
+  .Body {
+    width: 98%;
+    min-width: 0px;
+  }
+  .Container {
+    min-width: 0px;
+  }
+}
